GN: Fix references to lib_[dir_]prefix, which should be lib_[dir_]switch

Bug: 788007
Change-Id: I86de75ca303b66227db170021bdfd7fb50a61811
Reviewed-on: https://chromium-review.googlesource.com/786175
Commit-Queue: Scott Graham <scottmg@chromium.org>
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518820}
Former-commit-id: 5eea716fd5c781edcdf52fb34459867236c837a7