tools/gn/docs/reference.md
@@ -3064,7 +3064,7 @@
 
     {{libs}}
         Expands to the list of system libraries to link to. Each will be
-        prefixed by the "lib_prefix".
+        prefixed by the "lib_switch".
 
         As a special case to support Mac, libraries with names ending in
         ".framework" will be added to the {{libs}} with "-framework" preceeding
@@ -3177,8 +3177,8 @@
 ```
   toolchain("my_toolchain") {
     # Put these at the top to apply to all tools below.
-    lib_prefix = "-l"
-    lib_dir_prefix = "-L"
+    lib_switch = "-l"
+    lib_dir_switch = "-L"
 
     tool("cc") {
       command = "gcc {{source}} -o {{output}}"
@@ -4733,14 +4733,14 @@
   System libraries
       Values not containing '/' will be treated as system library names. These
       will be passed unmodified to the linker and prefixed with the
-      "lib_prefix" attribute of the linker tool. Generally you would set the
+      "lib_switch" attribute of the linker tool. Generally you would set the
       "lib_dirs" so the given library is found. Your BUILD.gn file should not
-      specify the switch (like "-l"): this will be encoded in the "lib_prefix"
+      specify the switch (like "-l"): this will be encoded in the "lib_switch"
       of the tool.
 
   Apple frameworks
       System libraries ending in ".framework" will be special-cased: the switch
-      "-framework" will be prepended instead of the lib_prefix, and the
+      "-framework" will be prepended instead of the lib_switch, and the
       ".framework" suffix will be trimmed. This is to support the way Mac links
       framework dependencies.
 ```
